# fin-pilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_zh.md  VERSIONS.md  pyproject.toml
backend/: __init__.py  config.py  constants.py  interfaces.py  main.py
backend/data/prompts/analysis/: news_report_en.j2
backend/data/prompts/stock/: company_overview.j2  follow_up.j2  system_prompt.j2
backend/llm/: __init__.py  base.py  claude_provider.py  factory.py  ollama_provider.py  openai_provider.py
backend/repositories/market/: __init__.py  akshare_provider.py  edgar_provider.py  factory.py
backend/routes/: _schemas.py  chat.py  health.py  stock.py
backend/services/analysis/: __init__.py  macro.py
backend/services/analysis/agents/: __init__.py  analyst_agent.py  news_agent.py  stock_agent.py
backend/services/chat/: orchestrator.py
backend/services/stock/: company_overview.py
backend/tests/: test_akshare_provider.py  test_chat_orchestrator.py  test_chat_route.py  test_company_overview.py  test_edgar_provider.py  test_main_app.py  test_market_factory.py
docs/: NEXT_STEPS.md  PRD-draft.md  PRD.md  QUICKSTART.md  SALVAGE_MAP.md  architecture.md  初步探讨思路.txt
docs/research/: competitor-landscape.md  data-sources.md
docs/versions/: v0.1.0.md  v0.2.0-开发中.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/industry/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/stock/: page.tsx
frontend/src/components/: AnnouncementTimelineCard.tsx  ChatPanel.tsx  CitationDrawer.tsx  CitationLabel.tsx  FinancialKPICard.tsx  LeftMenu.tsx  ResearchReportListCard.tsx  ThreePaneLayout.tsx  WorkspaceCanvas.tsx
frontend/src/features/stock/: ChatStream.tsx  CompanyView.tsx  TickerInput.tsx
frontend/src/hooks/: useChatStream.ts
frontend/src/services/: apiClient.ts  stockApi.ts
frontend/src/stores/: citationStore.ts  workspaceStore.ts
frontend/src/types/: chat.ts  citation.ts  stock.ts  workspace.ts
salvaged/ai_financial_advisor/: README.md  pyproject.toml
salvaged/ai_financial_advisor/docs/: architecture.md  deployment.md  development_history.md
salvaged/ai_financial_advisor/tests/: conftest.py  test_alert_manager.py  test_anomaly.py  test_backtester.py  test_config.py  test_indicators.py  test_llm_providers.py  test_macro_analysis.py  test_market_types.py  test_site_builder.py  test_storage.py  test_telegram_notifier.py  test_trend_score.py  test_trend_strategy.py
salvaged/openmanus_prompts/: manus.py
salvaged/openmanus_tools/: __init__.py  analyze_pdf_file.py  bash.py  browser_use_tool.py  create_chat_completion.py  deep_research.py  file_operators.py  mcp.py  planning.py  python_execute.py  str_replace_editor.py  terminate.py  tool_collection.py  tool_download_file.py  web_search.py
salvaged/openmanus_tools/search/: __init__.py  baidu_search.py  bing_search.py  duckduckgo_search.py  google_search.py
src/fin_pilot/: __init__.py  config.py
src/fin_pilot/agents/: analyst_agent.py  news_agent.py
src/fin_pilot/agents/prompts/: analyst_report.j2  news_report_cn.j2
src/fin_pilot/analysis/: anomaly.py  indicators.py  sentiment.py  trend_score.py
src/fin_pilot/data/: macro_data.py  market_types.py  news_fetcher.py  news_scraper.py  stock_data.py
src/fin_pilot/data/storage/: __init__.py  base.py  (+1 more)
src/fin_pilot/llm/: factory.py
