[project]
name = "fin-pilot"
version = "0.1.0.dev"
description = "FinPilot — Cursor for Financial Analysts. 三栏 AI 工作台 (个股 / 行业 / 市场)。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [{ name = "Pang (Jeff) Liu", email = "jeff.pang.liu@gmail.com" }]

dependencies = [
    # === Web 框架 ===
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",

    # === LLM + Agent 编排 ===
    "anthropic>=0.39",
    "openai>=1.50",
    "langchain>=0.3",
    "langgraph>=0.2",
    "jinja2>=3.1",

    # === 数据源 ===
    "akshare>=1.15",          # A 股全栈
    "yfinance>=0.2",          # 美股价格
    "pandas>=2.2",
    "numpy>=2.0",

    # === 工具 ===
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "loguru>=0.7",            # 结构化日志（替代 print）
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
]

# v0.1 暂不开放命令行入口；v0.4 引入持久化时再加
# [project.scripts]
# fin-pilot = "backend.main:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # line length 由 line-length 控制

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
